# litert-vulkan-backend

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_android.sh
include/litert/build_common/: build_config.h
src/compiler/: vulkan_compiler_plugin.cc
src/dispatch/: vulkan_dispatch_api.cc
